# pfe-frontend

./: database.db  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/api/: index.js
src/context/: AuthContext.jsx
src/pages/: Alerts.jsx  Dashboard.jsx  Login.jsx  Orders.jsx  Products.jsx  Settings.jsx  Stock.jsx  Suppliers.jsx  Users.jsx
src/utils/: format.js
